CSS/library.css
html,
*{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

header{
    justify-content: left;
}

body{
    background-color: slategrey;
}

.container {
    display: flex;
    justify-content: left;
    flex-wrap: wrap; /* Uses the resizing as per the screen size*/
}

.card{
    display: flex;
    flex-direction: column; /*Creates cards of equal sizes, maintaining the grid*/
    background: #f5f5f5;
    width: 250px;
    height: auto;
    margin: 15px;
    border-radius: 15px;
}

.card-img{
    height: 170px;
    margin-bottom: 15px;
    background-size: cover;
    border-radius: 15px 15px 0 0; /*To border the top of the images according to cards*/
}

.game1{
    background-image: url('https://s3-us-west-2.amazonaws.com/prd-rteditorial/wp-content/uploads/2020/09/02160233/EWKA_Last_of_Us-Screenshot.jpg');
}

.game2{
    background-image: url('https://cdn.vox-cdn.com/thumbor/z6162GTTNr_aR3v07o7lxq6P7tY=/0x0:3840x2160/1200x800/filters:focal(1613x773:2227x1387)/cdn.vox-cdn.com/uploads/chorus_image/image/69049646/miles_morales_tech_suit.0.jpeg');
}

.game3{
    background-image: url('https://sportshub.cbsistatic.com/i/2021/09/21/e3332d0d-2e27-4a9d-9cc8-c7012fee9ed2/red-dead-redemption-2-micah.png');
}
.card h2{
    padding: 10px;
}
.card p{
    padding: 10px;
    margin-top: auto;
}

.card a{
    background-color: darksalmon;
    color: white;
    padding: 15px 20px;
    display: block;
    margin: 20px 50px;
    margin-top: auto; /*Keeps buttons on same grid*/
}

.card:hover {
    background-color: blanchedalmond;
    cursor: pointer;
    transform: scale(1.02);
    transition: all 0.5s ease;
}

